--- a/app/src/main/res/layout/activity_test2.xml
+++ b/app/src/main/res/layout/activity_test2.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#32559c"
-    tools:context="case2.iths.com.case2.TestActivity">
+    android:background="@drawable/Moon"
+    tools:context="case2.iths.com.case2.Test2Activity">
 
     <TextView
         android:id="@+id/AppName"
@@ -26,38 +26,43 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="108dp"
+        android:layout_width="0dp"
         android:layout_height="49dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/button_shape"
+        android:layout_marginTop="72dp"
+        android:background="@color/MoonTrans"
         android:text="@string/spela"
-        android:textColor="?android:attr/colorBackground"
+        android:textColor="@android:color/background_light"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/AppName" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:background="@drawable/button_shape"
+        android:background="@color/MoonTrans"
         android:text="@string/inställningar"
-        android:textColor="?android:attr/colorBackground"
+        android:textColor="@android:color/background_light"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="111dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="24dp"
-        android:background="@drawable/button_shape"
+        android:background="@color/MoonTrans"
         android:text="@string/om"
-        android:textColor="?android:attr/colorBackground"
+        android:textColor="@android:color/background_light"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button3" />
