--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#3f51b5</color>
     <color name="colorPrimaryDark">#303f9f</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="buttonOffWhite">#e1e1e1</color>
-    <color name="MoonTrans">#c84f3a54</color>
+    <color name="colorAccent">#4fc11550</color>
+    <color name="buttonOffWhite">#35e1e1e1</color>
+    <color name="MoonTrans">#21543a53</color>
     <color name="SunTrans">#b5399abb</color>
-    <color name="BloodTrans">#c8887a7d</color>
+    <color name="BloodTrans">#b6887a7d</color>
 </resources>
