--- a/app/src/main/res/layout/activity_test3Sun.xml
+++ b/app/src/main/res/layout/activity_test3Sun.xml
@@ -28,7 +28,7 @@
         android:id="@+id/button2"
         android:layout_width="0dp"
         android:layout_height="49dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="28dp"
         android:background="@color/SunTrans"
         android:text="@string/spela"
         android:textColor="@android:color/background_light"
@@ -43,13 +43,14 @@
         android:id="@+id/button3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="172dp"
         android:background="@color/SunTrans"
         android:text="@string/inställningar"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button2" />
 
