--- a/app/src/main/res/layout/activity_test5_blue.xml
+++ b/app/src/main/res/layout/activity_test5_blue.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/light_pink"
-    tools:context="case2.iths.com.case2.Test4Activity">
+    android:background="@drawable/blue"
+    tools:context="case2.iths.com.case2.MainActivity">
 
     <TextView
         android:id="@+id/app_name"
@@ -28,7 +28,7 @@
         android:id="@+id/button_game"
         android:layout_width="160dp"
         android:layout_height="50dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="84dp"
         android:background="@color/MoonTrans"
         android:text="Spela"
         android:textColor="@android:color/background_light"
@@ -74,16 +74,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <ImageView
-        android:id="@+id/brain"
-        android:layout_width="200dp"
-        android:layout_height="180dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/brain" />
 
 
 </android.support.constraint.ConstraintLayout>
