--- a/app/src/main/res/layout/activity_test5.xml
+++ b/app/src/main/res/layout/activity_test5.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/lobster_two_bold"
-        android:text="Quizable"
+        android:text="@string/app_name2"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="80sp"
@@ -26,7 +26,7 @@
 
     <Button
         android:id="@+id/button_game"
-        android:layout_width="160dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="60dp"
         android:background="@color/MoonTrans"
@@ -39,7 +39,7 @@
 
     <Button
         android:id="@+id/button_settings"
-        android:layout_width="160dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="24dp"
         android:background="@color/MoonTrans"
@@ -52,7 +52,7 @@
 
     <Button
         android:id="@+id/button_about"
-        android:layout_width="160dp"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="24dp"
         android:background="@color/MoonTrans"
@@ -77,8 +77,8 @@
 
     <ImageView
         android:id="@+id/brain"
-        android:layout_width="200dp"
-        android:layout_height="180dp"
+        android:layout_width="162dp"
+        android:layout_height="153dp"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
