--- a/app/src/main/res/layout/activity_test6.xml
+++ b/app/src/main/res/layout/activity_test6.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/lobster_two_bold"
-        android:text="Quizable"
+        android:text="@string/app_name2"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="80sp"
