--- a/app/src/main/res/layout/activity_test4blood.xml
+++ b/app/src/main/res/layout/activity_test4blood.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/blood"
-    tools:context="case2.iths.com.case2.Test4Activity">
+    tools:context="case2.iths.com.QuizzGame.LayoutExampleActivity">
 
     <TextView
         android:id="@+id/app_name"
