--- a/app/src/main/res/layout/activity_handle_questions.xml
+++ b/app/src/main/res/layout/activity_handle_questions.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="case2.iths.com.QuizzGame.HandleQuestionsActivity">
+    tools:context="case2.iths.com.QuizGame.HandleQuestionsActivity">
 
 </android.support.constraint.ConstraintLayout>
