--- a/app/src/main/res/layout/activity_test2moon.xml
+++ b/app/src/main/res/layout/activity_test2moon.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/moon"
-    tools:context="case2.iths.com.QuizGame.LayoutExampleActivity">
+    tools:context="case2.iths.com.QuizGame.LayoutExamples.LayoutExampleActivity">
 
     <TextView
         android:id="@+id/app_name"
