--- a/app/src/main/res/layout/activity_test2moon.xml
+++ b/app/src/main/res/layout/activity_test2moon.xml
@@ -52,7 +52,8 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_game" />
+        app:layout_constraintTop_toBottomOf="@+id/button_game"
+        />
 
     <Button
         android:id="@+id/button4"
