--- a/app/src/main/res/layout/activity_test2moon.xml
+++ b/app/src/main/res/layout/activity_test2moon.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/moon"
+    android:background="@drawable/main_background"
     tools:context="case2.iths.com.QuizGame.LayoutExamples.LayoutExampleActivity">
 
     <TextView
@@ -28,7 +28,7 @@
         android:id="@+id/button_game"
         android:layout_width="0dp"
         android:layout_height="49dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginTop="20dp"
         android:background="@color/MoonTrans"
         android:elevation="0dp"
         android:text="@string/spela"
@@ -44,7 +44,7 @@
         android:id="@+id/button_settings"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="170dp"
+        android:layout_marginTop="15dp"
         android:background="@color/MoonTrans"
         android:text="@string/inställningar"
         android:textColor="@android:color/background_light"
@@ -58,7 +58,7 @@
         android:id="@+id/button4"
         android:layout_width="0dp"
         android:layout_height="50dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="15dp"
         android:background="@color/MoonTrans"
         android:text="@string/om"
         android:textColor="@android:color/background_light"
@@ -67,6 +67,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_settings" />
+
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:src="@drawable/background_beta"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button4"/>
 
     <TextView
         android:id="@+id/textView2"
