--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button_game"
+        android:id="@+id/playGameButton"
         android:layout_width="0dp"
         android:layout_height="49dp"
         android:layout_marginTop="20dp"
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toBottomOf="@+id/app_name" />
 
     <Button
-        android:id="@+id/button_settings"
+        android:id="@+id/settingsButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
@@ -52,10 +52,10 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_game" />
+        app:layout_constraintTop_toBottomOf="@+id/playGameButton" />
 
     <Button
-        android:id="@+id/button_about"
+        android:id="@+id/aboutButton"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
@@ -66,7 +66,7 @@
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_settings" />
+        app:layout_constraintTop_toBottomOf="@+id/settingsButton" />
 
     <ImageView
         android:layout_width="0dp"
@@ -75,7 +75,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_about"/>
+        app:layout_constraintTop_toBottomOf="@+id/aboutButton"/>
 
     <TextView
         android:id="@+id/textView2"
