--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -7,7 +7,37 @@ android:layout_height="match_parent"
 android:background="@drawable/moon"
 tools:context="case2.iths.com.QuizGame.SettingsActivity">
 
-<TextView
+    <Button
+        android:id="@+id/goBackToMainButton2"
+        android:layout_width="384dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="44dp"
+        android:background="@color/MoonTrans"
+        android:text="@string/go_back"
+        android:textColor="@android:color/background_light"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/profileButton"
+        android:layout_width="384dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="216dp"
+        android:background="@color/MoonTrans"
+        android:text="@string/profile"
+        android:textColor="@android:color/background_light"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
     android:id="@+id/app_name2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
