--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
         android:layout_marginTop="20dp"
         android:background="@color/MoonTrans"
         android:elevation="0dp"
+        android:onClick="toTheGame"
         android:text="@string/play"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
@@ -46,6 +47,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:background="@color/MoonTrans"
+        android:onClick="toTheSettings"
         android:text="@string/settings"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
@@ -60,6 +62,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
         android:background="@color/MoonTrans"
+        android:onClick="toTheAbout"
         android:text="@string/about"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
