--- a/app/src/main/res/layout/activity_game_menu.xml
+++ b/app/src/main/res/layout/activity_game_menu.xml
@@ -13,7 +13,7 @@
         android:layout_height="50dp"
         android:layout_marginBottom="212dp"
         android:layout_marginTop="8dp"
-        android:background="@color/MoonTrans"
+        android:background="@color/ButtonBackground"
         android:text="@string/create_question"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
@@ -30,7 +30,7 @@
         android:layout_width="384dp"
         android:layout_height="50dp"
         android:layout_marginTop="8dp"
-        android:background="@color/MoonTrans"
+        android:background="@color/ButtonBackground"
         android:text="@string/handle_questions"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
@@ -45,7 +45,7 @@
         android:layout_width="384dp"
         android:layout_height="50dp"
         android:layout_marginBottom="364dp"
-        android:background="@color/MoonTrans"
+        android:background="@color/ButtonBackground"
         android:text="@string/multiplayer"
         android:textColor="@android:color/background_light"
         android:textSize="24sp"
