--- a/app/src/main/res/layout/activity_test5.xml
+++ b/app/src/main/res/layout/activity_test5.xml
@@ -29,7 +29,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
-        android:background="@color/MoonTrans"
+        android:background="@color/ButtonBackground"
         android:text="Spela"
         android:textColor="@android:color/background_light"
         android:textSize="18sp"
@@ -42,7 +42,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:background="@color/MoonTrans"
+        android:background="@color/ButtonBackground"
         android:text="@string/settings"
         android:textColor="@android:color/background_light"
         android:textSize="18sp"
@@ -55,7 +55,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:background="@color/MoonTrans"
+        android:background="@color/ButtonBackground"
         android:elevation="0dp"
         android:text="@string/about"
         android:textColor="@android:color/background_light"
