--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:fontFamily="@font/lobster_two_bold"
         android:text="@string/app_name"
         android:textAlignment="center"
-        android:textColor="@android:color/background_dark"
+        android:textColor="@android:color/white"
         android:textSize="80sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
@@ -29,7 +29,7 @@
         android:layout_width="0dp"
         android:layout_height="49dp"
         android:layout_marginTop="40dp"
-        android:background="@color/MoonTrans"
+        android:background="@color/ButtonBackground"
         android:elevation="0dp"
         android:onClick="toTheGame"
         android:text="@string/play"
@@ -46,7 +46,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:background="@color/MoonTrans"
+        android:background="@color/ButtonBackground"
         android:onClick="toTheSettings"
         android:text="@string/settings"
         android:textColor="@android:color/background_light"
@@ -61,7 +61,7 @@
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="15dp"
-        android:background="@color/MoonTrans"
+        android:background="@color/ButtonBackground"
         android:onClick="toTheAbout"
         android:text="@string/about"
         android:textColor="@android:color/background_light"
@@ -80,6 +80,16 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/brain"
+        android:layout_width="162dp"
+        android:layout_height="153dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/brain" />
 
 
 </android.support.constraint.ConstraintLayout>
