--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,12 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/moon"
     tools:context="case2.iths.com.QuizGame.ProfileActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/moon"
         tools:context="case2.iths.com.QuizGame.PlayGameActivity">
 
         <Button
@@ -17,7 +17,7 @@
             android:layout_width="384dp"
             android:layout_height="50dp"
             android:layout_marginBottom="44dp"
-            android:background="@color/MoonTrans"
+            android:background="@color/ButtonBackground"
             android:text="@string/go_back"
             android:textColor="@android:color/background_light"
             android:textSize="24sp"
