--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -41,7 +41,7 @@ tools:context="case2.iths.com.QuizGame.SettingsActivity">
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="Inställningar"
+        android:text="@string/settings"
         android:textColorLink="@android:color/white"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
