--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -41,7 +41,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="Om"
+        android:text="@string/about"
         android:textColorLink="@android:color/white"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
