--- a/app/src/main/res/layout/activity_highscore.xml
+++ b/app/src/main/res/layout/activity_highscore.xml
@@ -46,7 +46,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
-            android:text="Highscore"
+            android:text="@string/highscore"
             android:textColorLink="@android:color/white"
             android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
