--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context="case2.iths.com.QuizGame.MainActivity">
 
     <TextView
-        android:id="@+id/app_name"
+        android:id="@+id/appName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -39,7 +39,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/app_name" />
+        app:layout_constraintTop_toBottomOf="@+id/appName" />
 
     <Button
         android:id="@+id/settingsButton"
@@ -72,12 +72,12 @@
         app:layout_constraintTop_toBottomOf="@+id/settingsButton" />
 
     <TextView
-        android:id="@+id/textView2"
-        android:textColor="@color/ButtonBackground"
+        android:id="@+id/developedByTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:text="@string/developed_by"
+        android:textColor="@color/ButtonBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
