--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -8,7 +8,7 @@ android:layout_height="match_parent"
 tools:context="case2.iths.com.QuizGame.SettingsActivity">
 
     <TextView
-        android:id="@+id/topTextView"
+        android:id="@+id/textview_top"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -25,7 +25,7 @@ tools:context="case2.iths.com.QuizGame.SettingsActivity">
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/developedByTextView"
+        android:id="@+id/textview_developed_by"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
