--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,7 +8,7 @@
     tools:context="case2.iths.com.QuizGame.SplashActivity">
 
     <TextView
-        android:id="@+id/developedByTextView"
+        android:id="@+id/developed_by"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
@@ -19,7 +19,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/splashAppName"
+        android:id="@+id/splash_app_name"
         android:layout_width="358dp"
         android:layout_height="155dp"
         android:fontFamily="@font/lobster_two_bold"
