--- a/app/src/main/res/layout/activity_singelplayer.xml
+++ b/app/src/main/res/layout/activity_singelplayer.xml
@@ -8,7 +8,7 @@
     tools:context="case2.iths.com.QuizGame.SinglePlayerActivity">
 
     <TextView
-        android:id="@+id/textview_top"
+        android:id="@+id/top_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -25,7 +25,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textview_developed_by"
+        android:id="@+id/developed_by_text"
         android:layout_width="wrap_content"
         android:layout_height="15dp"
         android:layout_marginBottom="16dp"
@@ -64,7 +64,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_top" />
+        app:layout_constraintTop_toBottomOf="@+id/top_text" />
 
     <Button
         android:id="@+id/button_culture"
