--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context="case2.iths.com.QuizGame.MainActivity">
 
     <TextView
-        android:id="@+id/textview_top"
+        android:id="@+id/top_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
@@ -39,7 +39,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textview_top" />
+        app:layout_constraintTop_toBottomOf="@+id/top_text" />
 
     <Button
         android:id="@+id/button_settings"
@@ -72,7 +72,7 @@
         app:layout_constraintTop_toBottomOf="@+id/button_settings" />
 
     <TextView
-        android:id="@+id/textview_developed_by"
+        android:id="@+id/developed_by_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
