--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
     <Button
         android:id="@+id/button_settings"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="44dp"
         android:layout_marginTop="15dp"
         android:background="@color/ButtonBackground"
         android:onClick="toTheSettings"
